--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+.content__container {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -7,4 +12,33 @@
 
 .header a {
   margin-left: 30px;
+}
+
+.hero-section {
+  margin-top: 26px;
+}
+
+.img__container {
+  display: flex;
+  justify-content: center;
+}
+
+.hero__img {
+  width: 90%;
+  height: auto;
+}
+
+.hero__content {
+  margin-top: 32px;
+}
+
+.hero__content__title {
+  font-size: 36px;
+  font-weight: 600;
+}
+
+.hero__content__paragraphe {
+  width: 320px;
+  font-weight: 300;
+  font-size: 16px;
 }
